# pet-project

./: .gitignore  .pre-commit-config.yaml.template  Dockerfile  Taskfile.yml  pyproject.toml  start.py
src/: main.py
src/application/: __init__.py  forms.py  inventory.py  main.py  shared.py
src/config/: __init__.py  builder.py  config.py  constants.py  types.py
src/config/consts/: connection.py  name.py  url.py
src/scenarios/: inventory.py
src/scenarios/nl_request/: check_ip.py  connection.py  request.py  request_to_nl.py  telegram.py
src/utils/: inventory.py
